--- a/Practice/index.html
+++ b/Practice/index.html
@@ -417,8 +417,7 @@
           <div class="carousel-item">
             <img class="d-block w-100" src="happyfamily3.jpg" alt="Third slide">
              <div class="carousel-caption">
-             	<h3>Some Things Has To Change</h3>
-             	<p>Hi</p>
+             	<p>hhhhhhhhhf</p>
              </div>
           </div>
         </div>
@@ -472,7 +471,7 @@
     	</div>
     </div>
     <div class="container-fluid">
-    	<img style="width: 100%;" src="happyfamily2.jpg">
+    	 <img style="width: 100%;" src="happyfamily2.jpg">
     </div>
     <script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
