--- a/Practice/newsandmedia.html
+++ b/Practice/newsandmedia.html
@@ -65,7 +65,7 @@
             <a style="color: #0000b3;" class="drop nav-link d-none d-lg-block" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
           </li>
           <li class="nav-item">
-            <a href="#" type="button"  class="btn btn-primary d-none d-sm-block">Need Help</a>
+            <a href="#" style="background-color: #0000b3; color: white;" type="button"  class="btn d-none d-sm-block">Need Help</a>
           </li>
           <li class="nav-item">
             <div class="dropdown">
