--- a/Hackathon/index.html
+++ b/Hackathon/index.html
@@ -4,6 +4,7 @@
       <meta name="viewport" content="width=device-width,initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <link rel="stylesheet" href="css/bootstrap.min.css">
+      <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@500&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="styles.css">
 <head>
@@ -393,7 +394,7 @@
 			</div>
 		</nav>
 	<div style="border-radius: 10px;" class="container-fluid">
-	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+	<div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -402,22 +403,29 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img class="d-block w-100" src="happyfamily1.jpg" alt="First slide">
-            <div class="carousel-caption">
-      	      <h3>Some Things Has To Change</h3>
-      	      <p>Hi</p>
+            <div class="carousel-caption d-none d-sm-block">
+      	      <h3>“Grief does not demand pity; It requests acknowledgment.” ― <strong>Jude Gibbs</strong></h3>
+            </div>
+            <div class="centered d-md-none">
+            	<h6>“Grief does not demand pity; It requests acknowledgment.” ― <strong>Jude Gibbs</strong></h6>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="happyfamily2.jpg" alt="Second slide">
-             <div class="carousel-caption">
-       	      <h3>Some Things Has To Change</h3>
-       	      <p>Hi</p>
+             <div class="carousel-caption d-none d-sm-block">
+       	      <h3>“Trauma may happen to you, but it can never define you.” ― <strong>Melinda Longtin</strong></h3>
+             </div>
+             <div class="centered d-md-none">
+             	<h6>“Trauma may happen to you, but it can never define you.” ― <strong>Melinda Longtin</strong></h6>
              </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="happyfamily3.jpg" alt="Third slide">
-             <div class="carousel-caption">
-             	<p>hhhhhhhhhf</p>
+             <div class="carousel-caption d-none d-sm-block">
+             	<h3>“From every wound there is a scar, and every scar tells a story. A story that says, -I survived.” ― <strong>Fr. Craig Scott</strong></h3>
+             </div>
+             <div class="centered d-md-none">
+             	<h6>“From every wound there is a scar, and every scar tells a story. A story that says, -I survived.” ― <strong>Fr. Craig Scott</strong></h6>
              </div>
           </div>
         </div>
@@ -431,7 +439,7 @@
         </a>
 	</div>
 	<div class="container text-center">
-		<h2 style="color: #0000b3;"> We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.</h2>
+		<h2 style="font-family: 'Hind Siliguri', sans-serif; color: #0000b3;"><p style="color: #33a395;">The more that we choose not to talk about domestic violence, the more we shy away from the issue, the more we lose.</p>Nobody believes that domestic violence kills and nobody believes it is detrimental to children. This world has got to wake up. To me, if there is domestic violence, if the children see it or hear it, that to me is detrimental. Batterers should not have rights to children.</h2>
 		<a href="#"><button type="button" class="btn btn-primary" >How to Start ?</button></a>
 		<a href="#"><button type="button" class="btn btn-primary" >About our Project</button></a>
     </div>
