--- a/Hackathon/abusiverelationships.html
+++ b/Hackathon/abusiverelationships.html
@@ -393,72 +393,22 @@
 			
 			</div>
 		</nav>
-	<div style="padding-left: 0;padding-right: 0;" class="container-fluid">
-	<div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="happyfamily1.jpg" alt="First slide">
-            <div class="carousel-caption d-none d-md-block">
-      	      <h3>“Grief does not demand pity; It requests acknowledgment.” ― <strong>Jude Gibbs</strong></h3>
-            </div>
-            <div class="centered d-md-none">
-            	<h6>“Grief does not demand pity; It requests acknowledgment.” ― <strong>Jude Gibbs</strong></h6>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="happyfamily2.jpg" alt="Second slide">
-             <div class="carousel-caption d-none d-md-block">
-       	      <h3>“Trauma may happen to you, but it can never define you.” ― <strong>Melinda Longtin</strong></h3>
-             </div>
-             <div class="centered d-md-none">
-             	<h6>“Trauma may happen to you, but it can never define you.” ― <strong>Melinda Longtin</strong></h6>
-             </div>
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="happyfamily3.jpg" alt="Third slide">
-             <div class="carousel-caption d-none d-md-block">
-             	<h3>“From every wound there is a scar, and every scar tells a story. A story that says, -I survived.” ― <strong>Fr. Craig Scott</strong></h3>
-             </div>
-             <div class="centered d-md-none">
-             	<h6>“From every wound there is a scar, and every scar tells a story. A story that says, -I survived.” ― <strong>Fr. Craig Scott</strong></h6>
-             </div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-	</div>
-    </div>
-	<div class="container text-center">
-		<h2 style="font-family: 'Hind Siliguri', sans-serif; color: #0000b3;"><p style="color: #33a395;">The more that we choose not to talk about domestic violence, the more we shy away from the issue, the more we lose.</p>Nobody believes that domestic violence kills and nobody believes it is detrimental to children. This world has got to wake up. To me, if there is domestic violence, if the children see it or hear it, that to me is detrimental. Batterers should not have rights to children.</h2>
-    </div>
-    <div style="border: 10px;" class="container">
-    	<div class="row">
-    		<div style="color: black; opacity: .9; border-radius: 20px; border: 6px solid white;background-image: url(gethelp.jpg) ;background-size: cover;" class="col-sm-4">
-    			<h3 style="font-weight: 600;">Get Help</h3>
-    			<p style="text-align: center;">Our highly-trained advocates are available 24/7/365 to talk confidentially with anyone experiencing domestic violence, seeking resources or information, or questioning unhealthy aspects of their relationship.</p>
-    	    </div>
-    		<div style="color: black; opacity: .9; border-radius: 20px; border: 6px solid white;background-image: url(getinvolved.jpg);background-size: cover;" class="col-sm-4">
-    			<h3 style="font-weight: 600;">Get Involved</h3>
-    			<p style="text-align: center;">Making a difference in the lives of thousands of victims, survivors and their families is the best reason to give to The Hotline. Every donation helps ensure someone is available to answer the most important call of a victim’s life.</p>
-    		</div>
-    		<div style="color: black; opacity: .9; border-radius: 20px; border: 6px solid white;background-image: url(staysafe.jpg);background-size: cover;" class="col-sm-4">
-    			<h3 style="font-weight: 600;">Stay Safe</h3>
-    			<p style="text-align: center;">Computer use can be monitored and is impossible to completely clear. If you’re afraid your internet/computer usage might be monitored, please use a safer computer, call your local hotline, or call our hotline.</p>
-    		</div>
-    	</div>
-    </div>
+		<div class="container">
+			<h3><i class="fa fa-quote-left" aria-hidden="true"></i>Why Don't They Just Leave?<i class="fa fa-quote-right" aria-hidden="true"></i></h3>
+			<p>Those who have never been victimized sometimes question why an unhealthy relationship does not just end a person. We don't realize it can be more difficult to leave than it sounds.</p>
+			<p>A survivor of violence sometimes leaving is the most difficult moment as violence is <a href="abusedefined.html">about power and control.</a> If a victim returns, they regain back and undermine the influence of the abusive partner, which may very destructively cause the abusive partner to retaliate.</p>
+			<p>Apart from this risk, there are other explanations why people remain in unhealthy relationships. Here are only a few that are common:</p>
+			<ul>
+				<li><strong>Fear:</strong>A person may be frightened of what happens if they want to end the relationship.</li>
+				<li><strong>Beleiving Abuse Is Normal:</strong>A person does not know what a good relationship looks like, maybe from growing up in an atmosphere where violence has been normal, and may not understand that his relationship is unhealthy.</li>
+				<li><strong>Embarassment:</strong>One also has trouble accepting that they have been violated. In getting involved with an abusive relationship they can believe they have done something wrong. I can even fear I be judged by their peers and families.</li>
+				<li><strong>Love:</strong>The survivor expresses love for her abusive husband too much. We may have kids with them who want to keep their families together. Some abusive men may be charming, particularly at the start of a relationship, and the victim can hope their abuser can return to being that person. They may just want to avoid the abuse, not for the relationship to end entirely.</li>
+				<li><strong>Lack Of Money/Resources:</strong>Financial violence is common, and a survivor can rely on their abusive spouse financially. Without capital, access to services or even a place to go, leaving the partnership may seem unlikely to them. This sense of helplessness will be extremely intense because the human being stays with his intimate wife.</li>
+				<li><strong>Low Self-Esteem</strong>If someone is continually being put down by an abusive person and blamed for the violence, it may be tempting for the survivor to accept those claims and assume that the harassment is their own.</li>
+				<li><strong>Cultural/Religious Reasons</strong>Traditional gender norms sponsored by the culture or religion of someone may encourage them to continue instead of terminating the relationship for fear of putting embarrassment to their families.</li>
+			</ul>
+		</div>
     <script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
-</html>
+</html>		
