--- a/Hackathon/whydopeopleabuse.html
+++ b/Hackathon/whydopeopleabuse.html
@@ -393,72 +393,15 @@
 			
 			</div>
 		</nav>
-	<div style="padding-left: 0;padding-right: 0;" class="container-fluid">
-	<div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="happyfamily1.jpg" alt="First slide">
-            <div class="carousel-caption d-none d-md-block">
-      	      <h3>“Grief does not demand pity; It requests acknowledgment.” ― <strong>Jude Gibbs</strong></h3>
-            </div>
-            <div class="centered d-md-none">
-            	<h6>“Grief does not demand pity; It requests acknowledgment.” ― <strong>Jude Gibbs</strong></h6>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="happyfamily2.jpg" alt="Second slide">
-             <div class="carousel-caption d-none d-md-block">
-       	      <h3>“Trauma may happen to you, but it can never define you.” ― <strong>Melinda Longtin</strong></h3>
-             </div>
-             <div class="centered d-md-none">
-             	<h6>“Trauma may happen to you, but it can never define you.” ― <strong>Melinda Longtin</strong></h6>
-             </div>
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="happyfamily3.jpg" alt="Third slide">
-             <div class="carousel-caption d-none d-md-block">
-             	<h3>“From every wound there is a scar, and every scar tells a story. A story that says, -I survived.” ― <strong>Fr. Craig Scott</strong></h3>
-             </div>
-             <div class="centered d-md-none">
-             	<h6>“From every wound there is a scar, and every scar tells a story. A story that says, -I survived.” ― <strong>Fr. Craig Scott</strong></h6>
-             </div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-	</div>
-    </div>
-	<div class="container text-center">
-		<h2 style="font-family: 'Hind Siliguri', sans-serif; color: #0000b3;"><p style="color: #33a395;">The more that we choose not to talk about domestic violence, the more we shy away from the issue, the more we lose.</p>Nobody believes that domestic violence kills and nobody believes it is detrimental to children. This world has got to wake up. To me, if there is domestic violence, if the children see it or hear it, that to me is detrimental. Batterers should not have rights to children.</h2>
-    </div>
-    <div style="border: 10px;" class="container">
-    	<div class="row">
-    		<div style="color: black; opacity: .9; border-radius: 20px; border: 6px solid white;background-image: url(gethelp.jpg) ;background-size: cover;" class="col-sm-4">
-    			<h3 style="font-weight: 600;">Get Help</h3>
-    			<p style="text-align: center;">Our highly-trained advocates are available 24/7/365 to talk confidentially with anyone experiencing domestic violence, seeking resources or information, or questioning unhealthy aspects of their relationship.</p>
-    	    </div>
-    		<div style="color: black; opacity: .9; border-radius: 20px; border: 6px solid white;background-image: url(getinvolved.jpg);background-size: cover;" class="col-sm-4">
-    			<h3 style="font-weight: 600;">Get Involved</h3>
-    			<p style="text-align: center;">Making a difference in the lives of thousands of victims, survivors and their families is the best reason to give to The Hotline. Every donation helps ensure someone is available to answer the most important call of a victim’s life.</p>
-    		</div>
-    		<div style="color: black; opacity: .9; border-radius: 20px; border: 6px solid white;background-image: url(staysafe.jpg);background-size: cover;" class="col-sm-4">
-    			<h3 style="font-weight: 600;">Stay Safe</h3>
-    			<p style="text-align: center;">Computer use can be monitored and is impossible to completely clear. If you’re afraid your internet/computer usage might be monitored, please use a safer computer, call your local hotline, or call our hotline.</p>
-    		</div>
-    	</div>
-    </div>
+		<div class="container">
+			<h3>Why Do People Abuse?</h3>
+			<p>Domestic violence and harassment stem from a desire to obtain and retain power over an intimate partner and its influence. Abusive people believe they have the right to dominate and intimidate their partners, and they can enjoy the feeling they get from exercising power. They also assume that the focus in their relationships should be their own feelings and desires, so they use manipulative methods to dismantle equality and make their partners feel less important and worthy of respect in the relationship.</p>
+			<p><strong>No matter why it happens, abuse is not okay and it’s never justified.</strong></p>
+			<p>Abuse is an learned mentality. We often see it in their own families. They hear it from peers or popular culture on certain occasions. Abuse, however, is a option, and no-one has to make it. Most people who grow up experiencing or witnessing violence tend not to use such harmful and destructive ways of behaving in their own relationships. Although violence can also exacerbate outside causes such as drug or alcohol addiction, it is most important to remember that such problems do not trigger violence.</p>
+			<h3>Who Can Be In An Abusive Relationship?</h3>
+			<p>Everybody can be violent and everyone can be the object of harassment. It occurs without regard to gender, age , sexual orientation, race or economic background. If your partner abusses you can feel confused, frightened, angry and/or trapped. Both those feelings are natural reactions to violence. You may as well blame yourself for what's going on. Yet, no matter what some may say, you are never liable for the violent acts of your partner. Es a preference to be violent. It's a strategic action that the abusive individual uses to dynamically build their desired control. No matter what the partnership circumstances or any partner's history, no one ever deserves to be violated.</p>
+		</div>
     <script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
-</html>
+</html>		
