--- a/Hackathon/abuse&immigrants.html
+++ b/Hackathon/abuse&immigrants.html
@@ -393,72 +393,31 @@
 			
 			</div>
 		</nav>
-	<div style="padding-left: 0;padding-right: 0;" class="container-fluid">
-	<div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="happyfamily1.jpg" alt="First slide">
-            <div class="carousel-caption d-none d-md-block">
-      	      <h3>“Grief does not demand pity; It requests acknowledgment.” ― <strong>Jude Gibbs</strong></h3>
-            </div>
-            <div class="centered d-md-none">
-            	<h6>“Grief does not demand pity; It requests acknowledgment.” ― <strong>Jude Gibbs</strong></h6>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="happyfamily2.jpg" alt="Second slide">
-             <div class="carousel-caption d-none d-md-block">
-       	      <h3>“Trauma may happen to you, but it can never define you.” ― <strong>Melinda Longtin</strong></h3>
-             </div>
-             <div class="centered d-md-none">
-             	<h6>“Trauma may happen to you, but it can never define you.” ― <strong>Melinda Longtin</strong></h6>
-             </div>
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="happyfamily3.jpg" alt="Third slide">
-             <div class="carousel-caption d-none d-md-block">
-             	<h3>“From every wound there is a scar, and every scar tells a story. A story that says, -I survived.” ― <strong>Fr. Craig Scott</strong></h3>
-             </div>
-             <div class="centered d-md-none">
-             	<h6>“From every wound there is a scar, and every scar tells a story. A story that says, -I survived.” ― <strong>Fr. Craig Scott</strong></h6>
-             </div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-	</div>
-    </div>
-	<div class="container text-center">
-		<h2 style="font-family: 'Hind Siliguri', sans-serif; color: #0000b3;"><p style="color: #33a395;">The more that we choose not to talk about domestic violence, the more we shy away from the issue, the more we lose.</p>Nobody believes that domestic violence kills and nobody believes it is detrimental to children. This world has got to wake up. To me, if there is domestic violence, if the children see it or hear it, that to me is detrimental. Batterers should not have rights to children.</h2>
-    </div>
-    <div style="border: 10px;" class="container">
-    	<div class="row">
-    		<div style="color: black; opacity: .9; border-radius: 20px; border: 6px solid white;background-image: url(gethelp.jpg) ;background-size: cover;" class="col-sm-4">
-    			<h3 style="font-weight: 600;">Get Help</h3>
-    			<p style="text-align: center;">Our highly-trained advocates are available 24/7/365 to talk confidentially with anyone experiencing domestic violence, seeking resources or information, or questioning unhealthy aspects of their relationship.</p>
-    	    </div>
-    		<div style="color: black; opacity: .9; border-radius: 20px; border: 6px solid white;background-image: url(getinvolved.jpg);background-size: cover;" class="col-sm-4">
-    			<h3 style="font-weight: 600;">Get Involved</h3>
-    			<p style="text-align: center;">Making a difference in the lives of thousands of victims, survivors and their families is the best reason to give to The Hotline. Every donation helps ensure someone is available to answer the most important call of a victim’s life.</p>
-    		</div>
-    		<div style="color: black; opacity: .9; border-radius: 20px; border: 6px solid white;background-image: url(staysafe.jpg);background-size: cover;" class="col-sm-4">
-    			<h3 style="font-weight: 600;">Stay Safe</h3>
-    			<p style="text-align: center;">Computer use can be monitored and is impossible to completely clear. If you’re afraid your internet/computer usage might be monitored, please use a safer computer, call your local hotline, or call our hotline.</p>
-    		</div>
-    	</div>
-    </div>
-    <script src="js/jquery-3.5.1.min.js"></script>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6">
+					<h3>Immigrants In US Have Right To Live Life Free Of Abuse</h3>
+					<p>Regardless of the immigrant status of the victim, abusive spouses have more means of maintaining influence and control over their families.</p>
+					<p>When in an abusive situation you are an alien or refugee, you might be facing special challenges that make it impossible to reach out for support.</p>
+					<p>According to materials from Futures Without Violence and Casa de Esperanza, abusive partners use the following tactics to abuse immigrant victims:</p>
+				</div>
+				<div class="col-lg-6">
+					<ul>
+						<li><strong>Isolation:</strong>Preventing the survivor from learning English, or interacting with their home country mates, relatives, or others.</li>
+						<li><strong>Threats:</strong>This prevents the expulsion or revocation of legal citizenship requests.</li>
+						<li><strong>Intimidation:</strong>Destroying required legal documents or papers such as passports, residence cards, health care or driver's licenses in this region.</li>
+						<li><strong>Economic Abuse:</strong>Getting the victim kicked out of their jobs by contacting bosses and alleging wrongly that the victim is missing.</li>
+						<li><strong>Children:</strong>Threatening to injure or cut off children while approaching officers.</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div style="border: 1px solid #0000b3;" class="container">
+			<h3>IMPORTANT TO REMEMBER</h3>
+			<p style="text-align: center;">As for citizenship questions and complaints, a professional immigration solicitor will also be the first point of contact. WomensLaw offers links to attorneys — please contact one of them before taking any course of action.</p>
+			<p style="text-align: center;"><strong>Regardless of your citizenship status, domestic violence is against regulation. For services that can help, call the hotline in your city.</strong></p>
+		</div>
+	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
-</html>
+</html>		
