--- a/Hackathon/abusedefined.html
+++ b/Hackathon/abusedefined.html
@@ -393,72 +393,39 @@
 			
 			</div>
 		</nav>
-	<div style="padding-left: 0;padding-right: 0;" class="container-fluid">
-	<div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="happyfamily1.jpg" alt="First slide">
-            <div class="carousel-caption d-none d-md-block">
-      	      <h3>“Grief does not demand pity; It requests acknowledgment.” ― <strong>Jude Gibbs</strong></h3>
-            </div>
-            <div class="centered d-md-none">
-            	<h6>“Grief does not demand pity; It requests acknowledgment.” ― <strong>Jude Gibbs</strong></h6>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="happyfamily2.jpg" alt="Second slide">
-             <div class="carousel-caption d-none d-md-block">
-       	      <h3>“Trauma may happen to you, but it can never define you.” ― <strong>Melinda Longtin</strong></h3>
-             </div>
-             <div class="centered d-md-none">
-             	<h6>“Trauma may happen to you, but it can never define you.” ― <strong>Melinda Longtin</strong></h6>
-             </div>
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="happyfamily3.jpg" alt="Third slide">
-             <div class="carousel-caption d-none d-md-block">
-             	<h3>“From every wound there is a scar, and every scar tells a story. A story that says, -I survived.” ― <strong>Fr. Craig Scott</strong></h3>
-             </div>
-             <div class="centered d-md-none">
-             	<h6>“From every wound there is a scar, and every scar tells a story. A story that says, -I survived.” ― <strong>Fr. Craig Scott</strong></h6>
-             </div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-	</div>
-    </div>
-	<div class="container text-center">
-		<h2 style="font-family: 'Hind Siliguri', sans-serif; color: #0000b3;"><p style="color: #33a395;">The more that we choose not to talk about domestic violence, the more we shy away from the issue, the more we lose.</p>Nobody believes that domestic violence kills and nobody believes it is detrimental to children. This world has got to wake up. To me, if there is domestic violence, if the children see it or hear it, that to me is detrimental. Batterers should not have rights to children.</h2>
-    </div>
-    <div style="border: 10px;" class="container">
-    	<div class="row">
-    		<div style="color: black; opacity: .9; border-radius: 20px; border: 6px solid white;background-image: url(gethelp.jpg) ;background-size: cover;" class="col-sm-4">
-    			<h3 style="font-weight: 600;">Get Help</h3>
-    			<p style="text-align: center;">Our highly-trained advocates are available 24/7/365 to talk confidentially with anyone experiencing domestic violence, seeking resources or information, or questioning unhealthy aspects of their relationship.</p>
-    	    </div>
-    		<div style="color: black; opacity: .9; border-radius: 20px; border: 6px solid white;background-image: url(getinvolved.jpg);background-size: cover;" class="col-sm-4">
-    			<h3 style="font-weight: 600;">Get Involved</h3>
-    			<p style="text-align: center;">Making a difference in the lives of thousands of victims, survivors and their families is the best reason to give to The Hotline. Every donation helps ensure someone is available to answer the most important call of a victim’s life.</p>
-    		</div>
-    		<div style="color: black; opacity: .9; border-radius: 20px; border: 6px solid white;background-image: url(staysafe.jpg);background-size: cover;" class="col-sm-4">
-    			<h3 style="font-weight: 600;">Stay Safe</h3>
-    			<p style="text-align: center;">Computer use can be monitored and is impossible to completely clear. If you’re afraid your internet/computer usage might be monitored, please use a safer computer, call your local hotline, or call our hotline.</p>
-    		</div>
-    	</div>
-    </div>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6">
+					<h3>What is Domestic Violence?</h3>
+					<p><strong>Domestic violence (also called intimate partner violence (IPV), domestic assault, or relationship assault) is a pattern of actions used by one partner in an intimate relationship to retain power and control over another partner.</strong></p>
+					<p>Not discriminating against domestic abuse. Anyone of any race, age , sexual orientation, religion or gender may be a survivor of domestic violence – or perpetrator of it. It can happen to people who're married, living together or dating together. This affects people of all social backgrounds and at all levels of education.</p>
+					<p>Domestic abuse involves actions that hurt physically, arouse fear, discourage a person from doing what they want or compel them to act in ways that they don't want. It involves physical and sexual assault, bullying and threats, mental abuse and economic deprivation. Many of these different types of domestic violence / harassment can occur in the same intimate at any time</p>
+					<p>Here we use the <strong>POWER & CONTROL WHEEL</strong>to describe most accurately <a href="whydopeopleabuse.html">what occurs in an abusive relationship</a></p>
+				</div>
+				<div class="col-lg-6">
+					<img style="width: 100%;" src="abusedefined.png">
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<h3>Warning Signs Of Domestic Violence</h3>
+			<p><strong>It's not always easy to say whether it will become problematic at the start of a relationship.</strong></p>
+			<p>In reality, in the early stages of a relationship, several abusive partners can seem absolute fine. Possessive and controlling behaviors do not necessarily manifest immediately, but instead emerge as the relationship develops and intensifies.</p>
+			<p>In any relationship domestic violence does not look the same, since each relationship is different. But one thing most abusive relationships have in common is that the abusive partner does a lot of different kinds of things to get more leverage and influence over their partner.</p>
+			<p>Many of the signs of a relationship being abusive include a partner who:</p>
+			<ul>
+				<li>Says you will never do something right</li>
+				<li>Controls every penny spent in the household</li>
+				<li>Controls who you see, where you go, or what you do</li>
+				<li>Take your money or refuse to give you money for expenses you need</li>
+				<li>Guns, knives or other weapons scare you</li>
+				<li>Insult, demean or shame you by put-down</li>
+				<li>Keeps you or discourages you from seeing friends or family members</li>
+				<li>Pressures you to have sex when you don’t want to or do things sexually you’re not comfortable with</li>
+			</ul>
+		</div>
+
     <script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
-</html>
+</html>		
