--- a/Hackathon/legalhelp.html
+++ b/Hackathon/legalhelp.html
@@ -394,18 +394,12 @@
 			</div>
 		</nav>
 		<div class="container">
-			<h3>Communication</h3>
-			<p>Any healthy relationship should be part of free, honest communication. The recommendations below will help to open communication channels between your partner and you. When you are in a relationship that is unhealthy or abusive, using those tips with caution. You know best about your relationship. If any of these tips put you in danger, we 're not suggesting you try them out.</p>
-			<p>For healthier communication, try to:</p>
-			<div class="container">
-				<div class="row">
-					<div style="width: 25%;text-align: center;"><i class="fa-5x fa fa-clock-o fa-spin" aria-hidden="true"></i></div>
-					<div style="width: 75%;">
-						<h3>FIND THE RIGHT TIME</h3>
-						<p>If you are having a serious talk with your partner about something that would bother you, it's a good idea to pick the right time to chat. Consider finding a moment when you and your partner are quiet, not upset, anxious or in a hurry. When one or both of you is very busy, you might even suggest arranging a time to chat.</p>
-					</div>
-				</div>
-			</div>
+			<img src="legal.jpg" style="width: 100%;">
+		</div>
+		<div class="container">
+			<h4>Legal Help</h4>
+			<p>Based on your case, you might be deciding that the safest option for you is to take legal action against an abusive partner.</p>
+			<p><strong>Please note: The Hotline does not offer legal advice nor are we lawyers.</strong>If required we can be able to help you find a lawyer in your area.Or talk with us online and our advocates will link you to the legal aid services.</p>
 		</div>
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
