--- a/Hackathon/socialmediasafety.html
+++ b/Hackathon/socialmediasafety.html
@@ -394,18 +394,31 @@
 			</div>
 		</nav>
 		<div class="container">
-			<h3>Communication</h3>
-			<p>Any healthy relationship should be part of free, honest communication. The recommendations below will help to open communication channels between your partner and you. When you are in a relationship that is unhealthy or abusive, using those tips with caution. You know best about your relationship. If any of these tips put you in danger, we 're not suggesting you try them out.</p>
-			<p>For healthier communication, try to:</p>
-			<div class="container">
-				<div class="row">
-					<div style="width: 25%;text-align: center;"><i class="fa-5x fa fa-clock-o fa-spin" aria-hidden="true"></i></div>
-					<div style="width: 75%;">
-						<h3>FIND THE RIGHT TIME</h3>
-						<p>If you are having a serious talk with your partner about something that would bother you, it's a good idea to pick the right time to chat. Consider finding a moment when you and your partner are quiet, not upset, anxious or in a hurry. When one or both of you is very busy, you might even suggest arranging a time to chat.</p>
-					</div>
-				</div>
-			</div>
+			<img src="techsafety.png" style="width: 100%;">
+		</div>
+		<div class="container">
+			<h3>Tech & Social Media Safety</h3>
+			<p>Technology is continuously evolving, and it can be used to threaten your health, or as a way of keeping you safe. Since issues of power and control are part of domestic violence, violent spouses also use technology to track and regulate those they harass. Below are a few points to help keep in mind when using the device.</p>
+			<p><strong>Would you have the feeling you are being monitored? Below are some interesting stuff.</strong></p>
+			<ul>
+				<li>Are you aware that someone might control the use of another person's machine without the user knowing it?</li>
+				<li>Knew you couldn't delete a "past" from a machine altogether?</li>
+				<li>Do you know that you can mount a global positioning system ( GPS) on your vehicle, in your purse or on your mobile phone?</li>
+				<li>Do you know that some of the court systems placed court documents online and can contain personal information?</li>
+				<li>Were you aware that e-mail is like a postcard and that it can be intercepted?</li>
+			</ul>
+		</div>
+		<div class="container">
+			<h3>There Are Ways to Guarantee Your Health</h3>
+			<p>Technology is a valuable resource for those fleeing a domestic abuse situation and our hotline advocates will help you prepare to use all facets of technology safely (whether you are a survivor, friend or family member).</p>
+			<h4>INTERNET SAFETY</h4>
+			<p>When you browse the internet on your phone, the places that you visit are registered on the phone you are using. Bills you pay are monitored, and transactions you make. You will get text messages and emails. Bear in mind that this could be tracked when you use a computer. You can find secure computers at the nearest library, internet café, home, work center or computer technology centre. When researching topics like travel plans, housing choices, legal problems and safety plans, do use secure computers.</p>
+			<h4>SOCIAL MEDIA</h4>
+			<p>Only post things that you want the public to see or learn. Once it's online it isn't under your control anymore. Be protective of your personal data. Your phone numbers and addresses allow people to contact you directly, and details like your date of birth, the schools you attended, your employer and iconic pictures will make it easier for anyone to find where you work, hang out or go to school. Set limits and boundaries. Say people don't share personal information, derogatory remarks or social media check-ins about you. Tell people not to share or tag photos if they don't feel comfortable with it.</p>
+			<h4>MOBILE</h4>
+			<p>Can be a beacon for cell phones, tracking your exact location in real time. The abusive spouse can also access the call and email history. In addition, you should put a location tracking device (GPS) on your car or in your pocket. Consider buying a pay as you go by phone to keep you in a safe place to let you make calls.</p>
+			<h4>EMAIL</h4>
+			<p>This could give your abusive partner access to your email address. To be protected, open an email account on a private device your partner doesn't know about and use that account for security planning and confidential communications. It's a smart idea to keep your tracked account working with non-critical emails to maintain the looks.</p>
 		</div>
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
