--- a/Hackathon/hotline.html
+++ b/Hackathon/hotline.html
@@ -394,18 +394,31 @@
 			</div>
 		</nav>
 		<div class="container">
-			<h3>Communication</h3>
-			<p>Any healthy relationship should be part of free, honest communication. The recommendations below will help to open communication channels between your partner and you. When you are in a relationship that is unhealthy or abusive, using those tips with caution. You know best about your relationship. If any of these tips put you in danger, we 're not suggesting you try them out.</p>
-			<p>For healthier communication, try to:</p>
-			<div class="container">
-				<div class="row">
-					<div style="width: 25%;text-align: center;"><i class="fa-5x fa fa-clock-o fa-spin" aria-hidden="true"></i></div>
-					<div style="width: 75%;">
-						<h3>FIND THE RIGHT TIME</h3>
-						<p>If you are having a serious talk with your partner about something that would bother you, it's a good idea to pick the right time to chat. Consider finding a moment when you and your partner are quiet, not upset, anxious or in a hurry. When one or both of you is very busy, you might even suggest arranging a time to chat.</p>
-					</div>
-				</div>
-			</div>
+			<h4>What to Expect ?</h4>
+			<p>Each single interaction is special to The Hotline. Some callers identify themselves as survivors of abuse, some as abusive partners, and some as family members concerned and friends seeking help from someone else. While each contact is individual-specific, here are some phrases and questions which advocates consistently use to help each caller or chatter best. </p>
+			<p><strong>"Thanks for having reached out."</strong></p>
+			<p>You might feel anxious to contact The Hotline, particularly if you haven't already reached out for help. We are fully confidential and discreet and our counselors have thorough experience on domestic abuse related issues. Reaching out for support is the first step towards changing the condition, whatever that might be, and when someone takes this crucial step, we are pleased to be of service.</p>
+			<p><strong>"Are you talking in a safe place?</strong></p>
+			<p>For your health, it 's important that you reach out when your partner isn't around, whenever possible. When your friend is coming home or walking in while talking to an attorney, break the call immediately. Since abusive relationships are power and control dependent, it is likely that an abusive partner will respond in rage if you take measures to reclaim control. Another way to remain secure is to try to delete our phone number after visiting our website and clear the history of your internet browsers.</p>
+			<p><strong>"Why don't you just tell me about your situation a little bit?</strong></p>
+			<p>They need to learn your particular situation before an advocate can start supporting you. It offers you an opportunity to address any questions you may have about your relationship. Giving a timeline of a relationship or explaining a recent altercation with your partner can sometimes give the advocate a better idea of what you have had.</p>
+			<p><strong>"What did you, at this stage, consider doing?</strong></p>
+			<p>You are your own condition expert. Callers reach out in their relationships at all different times and advocates need to ask what steps you are willing to take before they can help you find support. While an advisor does not offer clear guidance about what to do next, you will be able to explore several strategies for making the right choice for yourself.</p>
+			<p><strong>"What do you look about yourself?</strong></p>
+			<p>In any stage of a relationship self-care is important. When you're in an abusive relationship, you'll quickly forget to take care of yourself. It can be as easy to take care of yourself as having a healthy breakfast to prepare for the day, or getting enough sleep at night. Advocates also recommend you write in a journal, read a good book or take a bubble bath to calm your mind.</p>
+			<p><strong>"Let's have a brainstorm."</strong></p>
+			<p>Whether you're determining how to properly connect with your partner, planning to leave the relationship, or finding things you can do to feel secure, there's always more than one correct answer, and an advocate will help you figure out the best choices for you.</p>
+			<p><strong>"Here's something else I can help you with?</strong></p>
+			<p>Perhaps you thought of another question during your discussion with an advocate, or maybe you felt more confident asking something you were scared of asking before. Advocates are also ready to answer your safe relationship queries about how to cope with an unhealthy or abusive relationship so don't hesitate to inquire.</p>
+		</div>
+		<div class="container">
+			<h3>I was abusive to My partner. The Hotline can help me?</h3>
+			<p>For sure. Definitely. We also speak to individuals who classify as being violent, or who are worried about habits that may be dangerous. We treat with dignity and respect everyone who comes in contact with us and we support accountability. Any call from someone who is more conscious of their unhealthy behavior is an opportunity to plant a seed for improvement. Our Hotline advocates are compassionate, no matter what the case is, and remain empathetic.</p>
+			<p><strong>Which one supporter is going to recommend?</strong></p>
+			<p>Our supporters will speak to you about different course of action, depending on what you're asking for. When you and the counselor start noticing negative habits in your relationship during the call, they will explore these red flags with you, and then suggest positive behavioral solutions.</p>
+			<p>They 're going to talk about relaxing and de-escalating techniques if you feel upset and explore how your actions can impact you and everyone around you negatively. Callers may want to learn about battering intervention and prevention services — but not all BIPPS callers are the same. Although others are requesting a referral because they have been requested by the judge, some are finding the information of their own terms.</p>
+			<p><strong>May I call without being punished, really?</strong></p>
+			<p>Hey. If you're looking for someone to lend a confidential, unbiased ear, then our The Hotline advocates are a fantastic choice. We will listen, withhold judgement and help you start fixing what's happening in your relationship.</p>
 		</div>
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
